; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_mzpokeysnd.c_build_poly4.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_mzpokeysnd.c_build_poly4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@poly4tbl = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @build_poly4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @build_poly4() #0 {
  %1 = alloca i8, align 1
  %2 = alloca i8, align 1
  %3 = alloca i8, align 1
  store i8 1, i8* %3, align 1
  store i8 0, i8* %2, align 1
  br label %4

4:                                                ; preds = %35, %0
  %5 = load i8, i8* %2, align 1
  %6 = zext i8 %5 to i32
  %7 = icmp slt i32 %6, 15
  br i1 %7, label %8, label %38

8:                                                ; preds = %4
  %9 = load i8, i8* %3, align 1
  %10 = zext i8 %9 to i32
  %11 = xor i32 %10, -1
  %12 = trunc i32 %11 to i8
  %13 = load i8*, i8** @poly4tbl, align 8
  %14 = load i8, i8* %2, align 1
  %15 = zext i8 %14 to i64
  %16 = getelementptr inbounds i8, i8* %13, i64 %15
  store i8 %12, i8* %16, align 1
  %17 = load i8, i8* %3, align 1
  %18 = zext i8 %17 to i32
  %19 = ashr i32 %18, 2
  %20 = and i32 %19, 1
  %21 = load i8, i8* %3, align 1
  %22 = zext i8 %21 to i32
  %23 = ashr i32 %22, 3
  %24 = and i32 %23, 1
  %25 = xor i32 %20, %24
  %26 = trunc i32 %25 to i8
  store i8 %26, i8* %1, align 1
  %27 = load i8, i8* %3, align 1
  %28 = zext i8 %27 to i32
  %29 = shl i32 %28, 1
  %30 = and i32 %29, 15
  %31 = load i8, i8* %1, align 1
  %32 = zext i8 %31 to i32
  %33 = add nsw i32 %30, %32
  %34 = trunc i32 %33 to i8
  store i8 %34, i8* %3, align 1
  br label %35

35:                                               ; preds = %8
  %36 = load i8, i8* %2, align 1
  %37 = add i8 %36, 1
  store i8 %37, i8* %2, align 1
  br label %4

38:                                               ; preds = %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
